[gd_scene load_steps=6 format=3 uid="uid://dt1kyid57misk"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_oun0r"]
[ext_resource type="PackedScene" uid="uid://cxbydytg51h0h" path="res://scenes/main_menu/levels_state/levels_state.tscn" id="2_rov2t"]
[ext_resource type="PackedScene" uid="uid://c1e08151bivtp" path="res://scenes/settings/settings.tscn" id="3_jyhri"]
[ext_resource type="PackedScene" uid="uid://c1yj4me6ta8ob" path="res://scenes/main_menu/about_state/about_state.tscn" id="4_2txwq"]

[sub_resource type="LabelSettings" id="LabelSettings_r326m"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oun0r")

[node name="BackDark" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainState" type="VBoxContainer" parent="Margin"]
unique_name_in_owner = true
layout_mode = 2

[node name="GameName" type="Label" parent="Margin/MainState"]
unique_name_in_owner = true
layout_mode = 2
text = "Название Игры"
label_settings = SubResource("LabelSettings_r326m")
horizontal_alignment = 1

[node name="Space" type="Control" parent="Margin/MainState"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Margin/MainState"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="SelectLevel" type="Button" parent="Margin/MainState/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Уровни"

[node name="Settings" type="Button" parent="Margin/MainState/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Настройки"

[node name="About" type="Button" parent="Margin/MainState/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Об Игре"

[node name="Quit" type="Button" parent="Margin/MainState/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Выход"

[node name="LevelsState" parent="Margin" node_paths=PackedStringArray("main_menu") instance=ExtResource("2_rov2t")]
unique_name_in_owner = true
visible = false
layout_mode = 2
main_menu = NodePath("../..")

[node name="SettingsState" parent="Margin" node_paths=PackedStringArray("main_menu") instance=ExtResource("3_jyhri")]
unique_name_in_owner = true
visible = false
layout_mode = 2
main_menu = NodePath("../..")

[node name="AboutState" parent="Margin" node_paths=PackedStringArray("main_menu") instance=ExtResource("4_2txwq")]
unique_name_in_owner = true
visible = false
layout_mode = 2
main_menu = NodePath("../..")

[node name="FrontDark" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Вопрос"
initial_position = 2
unresizable = true
ok_button_text = "Да"
dialog_text = "Выйти из игры?"
cancel_button_text = "Нет"

[connection signal="pressed" from="Margin/MainState/Buttons/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="Margin/MainState/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Margin/MainState/Buttons/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Margin/MainState/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="canceled" from="QuitDialog" to="." method="_on_quit_dialog_canceled"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_quit_dialog_confirmed"]
